--- a/app/src/main/res/layout/tab_item_view.xml
+++ b/app/src/main/res/layout/tab_item_view.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:layout_marginLeft="5dp"
@@ -14,7 +14,7 @@
         card_view:cardElevation="6dp">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         <RelativeLayout
             android:id="@+id/rel"
@@ -85,9 +85,9 @@
                 android:id="@+id/txt_address_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/rel"
-                android:layout_marginTop="5dp"
-                android:textSize="16dp"
+                android:layout_below="@+id/txt_address"
+                android:textSize="14dp"
+                android:text="sdfs"
                 android:layout_toRightOf="@+id/txt_address"
                 android:textColor="@color/colorPrimary"
                 android:typeface="serif"
@@ -99,8 +99,8 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:background="@drawable/map_icon"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="10sp"
+              android:layout_below="@+id/txt_address_value"
+                android:layout_margin="15sp"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
