--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#0d243f </color>
     <color name="colorPrimaryDark">#0d243f </color>
+   <!-- <color name="colorPrimary">#FF6347</color>
+    <color name="colorPrimaryDark">#FF6347</color>-->
     <color name="colorAccent">#FF4081</color>
     <color name="header_text_color">#ffffff</color>
 
