--- a/app/src/main/res/layout/map_view.xml
+++ b/app/src/main/res/layout/map_view.xml
@@ -60,10 +60,10 @@
             android:layout_gravity="right"
             android:layout_marginRight="@dimen/fab_margin"
             android:visibility="invisible"
-            app:backgroundTint="@color/White"
+            app:backgroundTint="@color/colorPrimary"
             app:elevation="6dp"
             app:pressedTranslationZ="12dp"
-            android:src="@drawable/map_icon" />
+            android:src="@drawable/car_icon" />
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_share"
             android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
             app:elevation="6dp"
             android:layout_marginRight="@dimen/fab_margin"
             android:layout_alignParentRight="true"
-            app:backgroundTint="@color/White"
+            app:backgroundTint="@color/colorPrimary"
             app:pressedTranslationZ="12dp"
             android:src="@drawable/share"
             android:layout_toLeftOf="@+id/fab"
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             app:elevation="6dp"
-            app:backgroundTint="@color/White"
+            app:backgroundTint="@color/colorPrimary"
             app:pressedTranslationZ="12dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
