--- a/app/src/main/res/layout/map_view.xml
+++ b/app/src/main/res/layout/map_view.xml
@@ -9,22 +9,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimary"
+        android:background="@color/White"
         android:elevation="6dp"
         android:visibility="visible"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/back_arrow"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="NearBy Me"
             android:textSize="17dp"
-            android:textColor="@color/White"
+            android:textColor="@color/colorPrimary"
             android:typeface="serif"/>
+        </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
-
+<View
+    android:id="@+id/view"
+    android:layout_width="match_parent"
+    android:layout_height="0.5sp"
+    android:background="@color/colorPrimary"
+    android:layout_below="@+id/toolbar"/>
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -35,7 +52,7 @@
         android:layout_centerHorizontal="true"
         card_view:cardUseCompatPadding="true"
         card_view:cardElevation="10dp"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/view"
         android:layout_height="match_parent"
         >
         <RelativeLayout
