--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -5,6 +5,7 @@
     android:layout_marginTop="20dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
+    android:id="@+id/ll_menu_root"
     >
 
     <android.support.v7.widget.CardView
