--- a/app/src/main/res/layout/activity_more_detail.xml
+++ b/app/src/main/res/layout/activity_more_detail.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="?attr/actionBarSize"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/txt_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
@@ -15,12 +16,20 @@
             android:typeface="serif"
             android:layout_centerInParent="true"/>
         <ImageView
+            android:id="@+id/img_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/back_arrow"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10sp"
             />
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="80dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true"></Spinner>
         <View
             android:layout_width="match_parent"
             android:layout_height="1sp"
