--- a/app/src/main/res/layout/tab_inflated_view.xml
+++ b/app/src/main/res/layout/tab_inflated_view.xml
@@ -6,5 +6,13 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <TextView
+        android:id="@+id/txt_notfound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Results not found please change Distance Range"
+        android:textColor="@color/DarkRed"
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
