--- a/app/src/main/res/layout/tab_item_view.xml
+++ b/app/src/main/res/layout/tab_item_view.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        card_view:cardUseCompatPadding="true"
         android:layout_gravity="center"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
