--- a/app/src/main/res/layout/activity_more_detail.xml
+++ b/app/src/main/res/layout/activity_more_detail.xml
@@ -28,6 +28,7 @@
             android:layout_width="80dp"
             android:layout_height="20dp"
             android:layout_centerVertical="true"
+            android:background="@drawable/spinner_bg_black"
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"></Spinner>
         <View
