--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -5,33 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        card_view:cardElevation="10dp">
-
         <com.chrajeshkumar.nearby.Helper.CustomeGridview
             android:id="@+id/gridview"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/txt_english"
+            android:layout_height="150dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="15dp"
             android:adjustViewBounds="true"
             android:columnWidth="50dp"
             android:gravity="center"
             android:numColumns="2"
 
             />
-    </android.support.v7.widget.CardView>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:visibility="gone"
         android:layout_height="match_parent"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/gridview"
+            android:layout_centerInParent="true"
+            android:background="@drawable/coming_soon">
+
+        </ImageView>
+
+
 </RelativeLayout>
