--- a/app/src/main/res/layout/home_view.xml
+++ b/app/src/main/res/layout/home_view.xml
@@ -19,8 +19,10 @@
                 android:typeface="serif"/>
             <Spinner
                 android:id="@+id/spinner"
-                android:layout_width="80dp"
-                android:layout_height="20dp"
+                android:layout_width="100sp"
+                android:layout_height="25sp"
+              android:background="@drawable/spinner_bg_black"
+
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
                 android:layout_alignParentRight="true"></Spinner>
