--- a/app/src/main/res/layout/map_view.xml
+++ b/app/src/main/res/layout/map_view.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
         <ImageView
+            android:id="@+id/img_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
@@ -112,4 +113,9 @@
             android:src="@drawable/plus_icon" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/image_screen_shot"
+        android:layout_width="300dp"
+        android:layout_height="300dp" />
 </RelativeLayout>
