--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -15,5 +15,7 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyDkp9gJIpPUNivsOQxbNKCqhg1CoO_IEjw</string>
+    <!--<string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyBRYPJzxjUootBMrEqPvU8NAfIW1VdUApI</string> //test-->
+    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyCwlG6CYczHMUFJQJ7wkhD9m_ZGhN-ZBtk</string> //live
+
 </resources>
