--- a/app/src/main/res/layout/map_view.xml
+++ b/app/src/main/res/layout/map_view.xml
@@ -61,18 +61,31 @@
             android:layout_height="match_parent">
         <include
             layout="@layout/mapview_frame"/>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_root_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:visibility="visible"
+                app:backgroundTint="@color/colorPrimary"
+                app:elevation="6dp"
+                app:pressedTranslationZ="12dp"
+                android:src="@drawable/car_icon" />
         </RelativeLayout>
         </android.support.v7.widget.CardView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_root_view"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
