--- a/app/src/main/res/layout/tab_item_view.xml
+++ b/app/src/main/res/layout/tab_item_view.xml
@@ -30,7 +30,7 @@
                 android:layout_height="15dp"
                 android:layout_below="@+id/txt_titles"
                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="5sp"
                 android:src="@drawable/man"/>
             <TextView
 
@@ -40,7 +40,7 @@
                 android:layout_toRightOf="@+id/img_man"
                 android:layout_marginLeft="5dp"
                 android:text="700m"
-                android:layout_marginTop="10sp"
+                android:layout_marginTop="5sp"
                 android:layout_below="@+id/txt_titles"
                 android:textColor="@color/White"
                 android:textSize="13sp"
@@ -86,6 +86,7 @@
                 android:textColor="@color/White"
                 android:textSize="17sp"
                 android:typeface="serif"
+                android:layout_marginTop="5dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
