--- a/app/src/main/res/layout/activity_more_detail.xml
+++ b/app/src/main/res/layout/activity_more_detail.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
+        android:id="@+id/rel_header"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:orientation="vertical">
@@ -41,6 +42,15 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/rel_header"
         android:layout_marginTop="10dp"/>
+    <TextView
+        android:id="@+id/txt_notfound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Results not found please change Distance Range"
+        android:textColor="@color/DarkRed"
+        android:visibility="gone" />
 
-</LinearLayout>
+</RelativeLayout>
